--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -12,9 +12,20 @@
     font-family: Verdana, sans-serif;
     font-size: 16px;
     font-weight: normal;
-    color: black;
+    color: #42940F;
 }
 .loginBlock a {
     color: white;
+}
+.btnLogOut {
+    color: #42940F;
+    border: 2px solid #42940F;
+    cursor: pointer;
+    border-radius: 8px;
+    background-color: #FFFFFF;
+}
+.btnLogOut:hover {
+    background: #42940F;
+    color: #FFFFFF;
 }
 
