--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -4,7 +4,7 @@
     padding: 50px 20px 0 70px;
 }
 
-.item {
+.item a {
     color: white;
     text-decoration: none;
     color: forestgreen;
@@ -14,6 +14,6 @@
     line-height: 1.5;
 }
 
-a.active {
+.item a.active {
     color: gold;
 }
