--- a/src/Components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/Components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -5,3 +5,9 @@
 .mainPhoto {
     max-width:400px
 }
+
+.updatePhotoBlock {
+    font-family: Verdana, sans-serif;
+    font-size: 16px;
+    font-weight: bolder;
+}
